[package]
name = "btcAnalyser"
version = "0.1.0"
edition = "2021"
authors = ["Fabricio Blasich <fblasich0@gmail.com>"]
categories = ["command-line-utilities"]
about = "A bitcoin CLI analyser, it shows the 'n' last unconfirmed transactions, inspect a transaction by its hash and inspect a transaction address"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = "3.4.5"
ansi_term = "0.12.1"
reqwest = "0.12.14"
tokio = { version = "1.44.1", features = ["full"] }
chrono = "0.4.40"
cli-table = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
